crates/core-executor/src/tests/snapshots/query_select_date_add_diff.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT dateadd(day, 5, '2025-06-01')\""
---
Ok(
    [
        "+--------------------------------------------------+",
        "| dateadd(Utf8(\"day\"),Int64(5),Utf8(\"2025-06-01\")) |",
        "+--------------------------------------------------+",
        "| 2025-06-06T00:00:00                              |",
        "+--------------------------------------------------+",
    ],
)
