crates/core-executor/src/tests/snapshots/query_select_exclude.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT * EXCLUDE department_id FROM employee_table;\""
---
Ok(
    [
        "+-------------+------------+------------+",
        "| employee_id | last_name  | first_name |",
        "+-------------+------------+------------+",
        "| 101         | Montgomery | Pat        |",
        "| 102         | Levine     | Terry      |",
        "| 103         | Comstock   | Dana       |",
        "+-------------+------------+------------+",
    ],
)
