crates/core-executor/src/tests/snapshots/query_select_exclude_multiple.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT * EXCLUDE (department_id, employee_id) FROM employee_table;\""
---
Ok(
    [
        "+------------+------------+",
        "| last_name  | first_name |",
        "+------------+------------+",
        "| Montgomery | Pat        |",
        "| Levine     | Terry      |",
        "| Comstock   | Dana       |",
        "+------------+------------+",
    ],
)
